feat: whiteboard with context pattern

--- a/src/components/heading/Whiteboard.astro
+++ b/src/components/heading/Whiteboard.astro
@@ -2,6 +2,12 @@
 import { scope } from "simple:scope";
 import marker from "./marker.svg?raw";
 import { Icon } from "astro-icon/components";
+
+type Props = {
+  $context: typeof $;
+};
+
+const { $context } = Astro.props;
 ---
 
 <div
@@ -12,13 +18,11 @@ import { Icon } from "astro-icon/components";
   <canvas
     width="800"
     height="1200"
-    data-target="my-whiteboard.canvas"
-    data-action="click:my-whiteboard#startDrawing"
+    data-target={$context("canvas")}
     class="absolute w-[85%] h-[85.7%] inset-y-[7%] inset-x-[10.8%] rounded-[5%]"
   ></canvas>
   <div
-    data-action="click:my-whiteboard#startDrawing"
-    data-target="my-whiteboard.eraser"
+    data-target={$context("eraser")}
     class="absolute left-[14%] bottom-[9%] w-[13%] h-[13%]"
   >
     <label
@@ -31,8 +35,7 @@ import { Icon } from "astro-icon/components";
   <div>
     <button
       class="invisible opacity-0 group-[[data-drawing]]:opacity-100 group-[[data-drawing]]:visible transition-all absolute top-6 right-2 p-2 bg-slate-500 rounded-full"
-      data-target="my-whiteboard.closeBtn"
-      data-action="click:my-whiteboard#stopDrawing"
+      data-target={$context("closeBtn")}
     >
       <span class="sr-only">Close</span>
       <Icon name="close" class="text-white" />
@@ -40,7 +43,7 @@ import { Icon } from "astro-icon/components";
   </div>
   <div
     class="group/markers opacity-30 group-[[data-drawing]]:opacity-100 transition-opacity absolute bottom-[2%] left-[10%] right-[5%] flex justify-center gap-[5%]"
-    data-action="click:my-whiteboard#startDrawing"
+    data-target={$context("markers")}
   >
     <label
       class="text-marker-red w-[24%] opacity-80 translate-y-0 group-[[data-drawing]]:has-checked:opacity-100 group-[[data-drawing]]:has-checked:-translate-y-[30%] transition-opacity transition-transform ease-spring-5 duration-700"
@@ -87,7 +90,7 @@ import { Icon } from "astro-icon/components";
         height="513.09"
         rx="20"
         fill="#F9FAFB"></rect>
-      <g data-target="my-whiteboard.face">
+      <g data-target={$context("face")}>
         <path
           d="M158.262 319.189C168.246 330.416 185.183 338.872 211.569 338.872C237.955 338.872 254.892 330.416 264.876 319.189"
           stroke="#6200FF"
@@ -100,7 +103,7 @@ import { Icon } from "astro-icon/components";
           stroke-width="35"
           stroke-linecap="round"></path>
         <rect
-          data-targets="my-whiteboard.eyes"
+          data-target={$context("eyes")}
           x="90.7898"
           y="201.2"
           width="20.5027"
@@ -110,7 +113,7 @@ import { Icon } from "astro-icon/components";
 
         <rect
           class="sm:hidden group-[[data-drawing]]:hidden"
-          data-targets="my-whiteboard.eyes"
+          data-target={$context("eyes")}
           x="90.7898"
           y="201.2"
           width="30"
@@ -118,7 +121,7 @@ import { Icon } from "astro-icon/components";
           rx="15"
           fill="#6200FF"></rect>
         <rect
-          data-targets="my-whiteboard.eyes"
+          data-target={$context("eyes")}
           x="307.299"
           y="201.2"
           width="20.5027"
@@ -128,7 +131,7 @@ import { Icon } from "astro-icon/components";
 
         <rect
           class="sm:hidden group-[[data-drawing]]:hidden"
-          data-targets="my-whiteboard.eyes"
+          data-target={$context("eyes")}
           x="307.299"
           y="201.2"
           width="30"
@@ -137,7 +140,7 @@ import { Icon } from "astro-icon/components";
           fill="#6200FF"></rect>
         <path
           clip-path={`url(#${scope("scribble-bounds")})`}
-          data-target="my-whiteboard.scribble"
+          data-target={$context("scribble")}
           d="M22.2191 30.6216C89.0424 33.6849 240.261 44.5515 300.44 82.6372C224.592 53.5359 59.8409 59.4502 22.688 89.3778C61.8098 73.8145 248.839 102.982 279.368 142.084C232.335 109.693 49.0079 123.682 20.1221 147.941C57.2131 132.178 252.802 157.562 275.461 202.292C242.329 178.056 52.5287 185.746 26.0628 206.139"
           stroke="#F9FAFB"
           transform="translate(58 160)"
@@ -195,7 +198,7 @@ import { Icon } from "astro-icon/components";
     animation: float 4s ease-in-out infinite;
   }
 
-  :global(my-whiteboard[data-drawing]) [data-whiteboard-container] {
+  :global([data-drawing]) [data-whiteboard-container] {
     animation-play-state: paused;
   }
 
