refactor: remove last web component

--- a/src/components/iBen/CdDrive.astro
+++ b/src/components/iBen/CdDrive.astro
@@ -39,7 +39,7 @@
     animation-delay: 0.4s;
   }
 
-  :global(my-computer[data-welcome]) [data-cd-drive] {
+  :global([data-welcome]) [data-cd-drive] {
     animation: close-drive 0.7s var(--ease-spring-5) forwards;
   }
 
