--- a/src/components/heading/Heading.astro
+++ b/src/components/heading/Heading.astro
@@ -96,7 +96,7 @@ import WhiteboardContext from "./WhiteboardContext.astro";
 </WhiteboardContext>
 
 <script>
-  ready(() => {
+  $.ready(() => {
     $("scroll-trigger").addEventListener("click", (e) => {
       e.preventDefault();
       document
