--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -128,7 +128,7 @@ function isMatch(urlPath: string, linkPath: string) {
 
   const open = new Signal.State(false);
 
-  ready(() => {
+  $.ready(() => {
     let scrollY = 0;
     let ticking = false;
     const abort = new AbortController();
